<resources>
    <string name="app_name">Minimal</string>
    <string name="add_to_do">Add To Do</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="done_label">Done</string>
    <string name="no_to_dos">You don\'t have any todos</string>
    <string name="deleted_todo">Deleted Todo</string>
    <string name="undo">Undo</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="remind_me">Remind Me</string>
    <string name="_at">\@</string>
    <string name="todo_date_time">%1$s %2$s</string>
    <string name="reminder_set_for">Reminder set for %1$s</string>
    <string name="entered_date_in_past">The date you entered is in the past</string>
    <string name="snooze">Snooze</string>
    <string name="remove">Remove</string>
    <string name="night_mode">Night Mode</string>
    <string name="night_mode_on">Night mode is on</string>
    <string name="night_mode_off">Night mode is off</string>
    <string name="version">Version: %1$s</string>
    <string name="made_by">Made by Avjinder</string>
    <string name="contact_me">You can contact me at</string>
    <string name="is_prior">Is Prior</string>
    <string name="email_address" translatable="false">avisekhon2@gmail.com</string>
    <string name="sort_order">Sort Order</string>
    <string name="by_time">By Time</string>
    <string name="by_name">By Name</string>
    <string name="share">Share</string>

    <string-array name="months_abbreviations">
        <item>jan</item>
        <item>feb</item>
        <item>mar</item>
        <item>apr</item>
        <item>may</item>
        <item>jun</item>
        <item>jul</item>
        <item>aug</item>
        <item>sep</item>
        <item>oct</item>
        <item>nov</item>
        <item>dec</item>
    </string-array>

    <string-array name="snooze_options">
        <item>10 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
    </string-array>
</resources>