<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddToDoFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_clear_outlined"
        app:navigationIconTint="@color/icons"
        app:title="@string/app_name" />

    <FrameLayout
        android:id="@+id/fl_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/layout_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_weight="0.5">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="32dp"
                android:hint="@string/title"
                android:inputType="textAutoCorrect|textCapSentences"
                android:lines="2"
                android:maxLength="30"
                android:maxLines="3" />

        </com.google.android.material.textfield.TextInputLayout>

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_description"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/layout_reminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="32dp"
            android:hint="@string/description"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="2"
            android:maxLines="3"
            android:scrollbars="vertical" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_reminder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_description"
        app:layout_constraintVertical_weight="1.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_settings"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toTopOf="@id/cl_reminder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_is_prior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_prior"
                app:layout_constraintBottom_toTopOf="@id/ll_toggle_reminder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:padding="10dp"
                android:text="@string/share"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/cb_is_prior"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@id/cb_is_prior"
                app:layout_constraintTop_toTopOf="@id/cb_is_prior" />

            <LinearLayout
                android:id="@+id/ll_toggle_reminder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cb_is_prior">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:background="@android:color/transparent"
                    android:padding="8dp"
                    app:srcCompat="@drawable/ic_add_alarm_outlined"
                    app:tint="#727272" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switch_add_reminder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="8dp"
                    android:text="@string/remind_me"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_copy"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_margin="8dp"
                    android:layout_weight=".37"
                    android:background="@drawable/ic_content_copy_outlined"
                    android:padding="8dp"
                    app:backgroundTint="@color/grey600" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_reminder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_settings"
            app:layout_constraintVertical_weight="1">

            <EditText
                android:id="@+id/et_reminder_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@id/separator_at_symbol"
                app:layout_constraintHorizontal_weight="1.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/separator_at_symbol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/_at"
                android:textColor="?attr/colorAccent"
                app:layout_constraintBaseline_toBaselineOf="@id/et_reminder_date"
                app:layout_constraintEnd_toStartOf="@id/et_reminder_time"
                app:layout_constraintHorizontal_weight=".2"
                app:layout_constraintStart_toEndOf="@id/et_reminder_date"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_reminder_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textAlignment="center"
                app:layout_constraintBaseline_toBaselineOf="@id/et_reminder_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/separator_at_symbol"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_reminder_set"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary_text"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_reminder_date"
                app:layout_constraintVertical_bias="0.25" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save_to_do_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_send_filled"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>